--- a/company.html
+++ b/company.html
@@ -25,6 +25,14 @@
 
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.11';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
  <header>
    <div id="header_in" class="container">
      <div class="row">
@@ -37,7 +45,7 @@
        <div class="six columns navi">
          
          <div class="sp_navi">
-           <img id="sp_navi_btn" class="u-max-full-width" alt="株式会社サンプル" srcset="images/top/sp_navi@2x.png 2x"/>
+           <img id="sp_navi_btn" class="u-max-full-width" src="images/top/sp_navi.png "alt="株式会社サンプル" srcset="images/top/sp_navi@2x.png 2x"/>
         
            <ul class="sp_navi_li">
              <li><a href="index.html">TOPページ</a></li>
@@ -60,7 +68,6 @@
      </div>
      <!-- row -->
      </div>
-   </div>
    <!-- header_in -->
  </header>
  
@@ -138,7 +145,7 @@
           </ul>
         </div>
          <!-- pc_sidemenu -->                                                     
-        <div class="fb-page fb_iframe_widget" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" fb-xfbml-state="rendered" fb-iframe-plugin-query="adapt_container_width=true&amp;app_id=&amp;container_width=211&amp;height=300&amp;hide_cover=false&amp;href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&amp;locale=ja_JP&amp;sdk=joey&amp;show_facepile=false&amp;small_header=false&amp;tabs=timeline"><span style="vertical-align: bottom; width: 211px; height: 300px;"><iframe name="f1878bf60616128" width="1000px" height="300px" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" title="fb:page Facebook Social Plugin" src="https://www.facebook.com/v2.6/plugins/page.php?adapt_container_width=true&amp;app_id=&amp;channel=http%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FlY4eZXm_YWu.js%3Fversion%3D42%23cb%3Df2c5988e32821d8%26domain%3Ddemo.techacademy.jp%26origin%3Dhttp%253A%252F%252Fdemo.techacademy.jp%252Ff907fa12125774%26relation%3Dparent.parent&amp;container_width=211&amp;height=300&amp;hide_cover=false&amp;href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&amp;locale=ja_JP&amp;sdk=joey&amp;show_facepile=false&amp;small_header=false&amp;tabs=timeline" style="border: none; visibility: visible; width: 211px; height: 300px;" class=""></iframe></span></div>
+      <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div>
 
       </div>
       <!-- sidebar theree columns ここまで -->
