finish corporate-site

--- a/company.html
+++ b/company.html
@@ -45,7 +45,7 @@
        <div class="six columns navi">
          
          <div class="sp_navi">
-           <img id="sp_navi_btn" class="u-max-full-width" src="images/top/sp_navi.png "alt="株式会社サンプル" srcset="images/top/sp_navi@2x.png 2x"/>
+           <img id="sp_navi_btn" class="u-max-full-width" src="images/top/sp_navi.png " alt="株式会社サンプル" srcset="images/top/sp_navi@2x.png 2x"/>
         
            <ul class="sp_navi_li">
              <li><a href="index.html">TOPページ</a></li>
@@ -196,7 +196,7 @@
   </div>
 </footer>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script>
     $(function(){
        $(document).ready(function(){
