--- a/news.html
+++ b/news.html
@@ -172,7 +172,7 @@
   </div>
 </footer>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script>
     $(function(){
        $(document).ready(function(){
